# mWidar

./: .gitattributes  .gitignore  .venv  CMakeLists.txt  GNU_Parallel.bib  README.md  compile_commands.json  mWidar.code-workspace
Kalman_Filters/Final_Test_Tracks/: sim_mWidar_image.asv  sim_mWidar_image.m  single_target_tracks.asv  single_target_tracks.m
Kalman_Filters/GNN-KF/: GNN_KF.m  mWidar_FilterPlot.m  test.m  testGNN_KF.m
Kalman_Filters/KF/: GenLinearTracks.m  KF_DS.m  KF_MS.m  KF_TestScript.m  NEES_KF.m  mWidar_LinearKF_plot.m
Kalman_Filters/PDAF/: GenLinearTracks.m  Precompute_mWidar_data.asv  Precompute_mWidar_data.m  Simulator.m  mWidar_FilterPlot.asv  mWidar_FilterPlot.m  mWidar_PDAF.m  run_mWidar_PDAF.asv  run_mWidar_PDAF.m
Kalman_Filters/UKF/: AUKF_DynamicsStepDubin.m  (+23 more)
LinearKF/: GenerateCircleTruth.m  GenerateLineTruth.m  GenerateVTruth.m  NEES_Circle.m  NEES_Line.m  NEES_Vshape.m  NIS_Circle.m  NIS_Line.m  NIS_Vshape.m  SingleObj_KF_PerfectDA_Acc.m  calc_gsigma_ellipse_plotpoints.m  calculateEllipse.m  calculateEllipse.m:Zone.Identifier  mWidar_KF_PerfDA_Acc.m
detectors/: CA_CFAR.m  FastPeakFind.m  TD.m  TDPF.m  TDPF_TESTSCRIPT.m  array2latex.m  backup.m  calcTPFPFN.m  calcTPFPFN_old.m  cfar_test.m  detector_tester.m  generate_dataset.m  h_maximas.m  h_maximas_peaks.m  max_peaks.m  peaks2.m  plot_MC_results_legacy.m  plot_MC_results_multi.m  plot_mWidar_image_MC.m  random_track.m  random_tracks.m  random_tracks2.m  run_MC_Detector.m  scaleSignal.m  sim_mWidar_image.m  sim_mWidar_image_gif.m
include/: DataProcessor.h  GraphProcessor.h  Object.h  Simulator.hpp  VisionProcessor.h  dataStructures.h
mWidar_physical_platform/: Nyquist Zones.ipynb
matlab_src/: FilterConfig.m  FilterFactory.m  FilterHyperParams.m  TrackManager.m  animate_experiment_results.m  generate_commands.sh  generate_test_dataset.asv  generate_test_dataset.m  generate_tuning_dataset.m  main.m  main_multiObj.m  plot_all_experiment_results.m  plot_experiment_results.m  plot_hmm_grids.m  plot_test_dataset_gt.m  plot_test_dataset_gt_gif.m  run_all_datasets.sh  run_all_datasets_parallel.sh  run_all_experiments.m  run_all_parallel.m  run_experiment.m  startup.m  stats_experiment_results.m  test_debug.m  test_rbpf_multi.m  tuning_main.m
simulator/: .gitignore  CMakeLists.txt  GT.mat  Simulator  Simulator.cpp  Simulator.m  convert_files.py  example.ipynb  getTracks.py  helper_classes.py  params.json  posix_sem.py  recovery.mat  requirements.txt  sampling.mat  semaphore.py  setup.bash  setup.cmd  setup.py  simulateTracks.py  simulated_signal.mat  simulator.py  windows-requirements.txt  windows_sem.py
simulator/.cache/clangd/index/: Simulator.cpp.0FC1CC0146B9E50D.idx
simulator/Simulator.dSYM/Contents/: Info.plist
simulator/Simulator.dSYM/Contents/Resources/DWARF/: Simulator
simulator/Simulator.dSYM/Contents/Resources/Relocations/aarch64/: Simulator.yml
simulator/data/: recovery-12tx-4096samples-128x128.npy  sampling-12tx-4096samples-128x128.npy
simulator/data/tracks/: SimTraj_Circle.npy  SimTraj_Corners.npy  SimTraj_Line.npy  SimTraj_Vshape.npy  TrueAccCircle.npy  TrueAccLine.npy  TrueAccVshape.npy  TrueVelCircle.npy  TrueVelLine.npy  TrueVelVshape.npy
simulator/import/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  createMore.py  import_bin.cpp  test  test.ipynb
simulator/matlab_functions/: importBinaryToMat.m  update_objects.m
src/: DataProcessor.cpp  GraphProcessor.cpp  Object.cpp  VisionProcessor.cpp
(+133 files in other folders)
